Laptop JVM x GC matrix on the spinning route: G1 +22 %, GraalVM 15 % behind C2; run.sh --no-mangohud
Seven uncapped runs on the battery-powered laptop with frame times from the in-game
overlay only (new --no-mangohud switch keeps MangoHud out of the process): stock vs
optimized, Zulu ZGC vs G1, Oracle GraalVM 25.2.4 and 25.3.4.1 with both collectors,
plus a 100 s Zulu vs GraalVM pair showing Graal only reaching parity after ~2 minutes.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>